# discord_bot

./: .gitignore  CHANGELOG.md  Dockerfile  README.md  compose.yaml  main.py  package-lock.json  package.json  prompt.txt  pyproject.toml  settings.py
.github/workflows/: release.yml
