[tool.poetry]
name = "discord-bot"
version = "0.1.0"
description = ""
authors = ["Haitham Seelawi <haitham.seelawi@adarga.ai>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
discord-py = "^2.4.0"
pydantic-settings = "^2.6.1"
beautifulsoup4 = "^4.12.3"
requests = "^2.32.3"
numpy = "^2.1.3"
pandas = "^2.2.3"
aiohttp = "^3.11.10"
anthropic = "^0.40.0"
s3fs = "^2024.10.0"


[tool.poetry.group.dev.dependencies]
ruff = "^0.8.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88
extend-exclude = [
    'build-tools',
]
lint.extend-select = ["W", "I", "B", "C90", "W", "N", "RUF", "NPY", "PL"]
lint.ignore = ["N812", "PLR2004"]
